created login in view page login/registration forms

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <title></title>
+  </head>
+  <body>
 
-	<h1>Login Page</h1>
+    <div class="container">
+      <div class="row">
+				<header>
+					<h1>Live Music Finder App</h1>
+					<h2>Landing Page</h2>
+					<nav class="navbar navbar">
+	          <ul class="nav navbar-nav">
+	            <li class= "active">
+	              <a href="#">Login</a>
+	            </li>
 
-<!-- this is the login page
- -->
+	          <li>
+	            <a href="#">Registration</a>
+	            </li>
 
-</body>
+	          </ul>
+	        </nav>
+	      </div>
+			</header>
+
+				</main>
+      <% if (message) { -%>
+		      <p style="background-color: pink"><%= message %></p>
+	     <% } -%>
+
+        <div class="row">
+            <form action="/login" method="post" id = "login">
+              <div class="form-group">
+                <h4>Login</h4>
+                  <input type="text" name="username" placeholder="username">
+                  <input type="password" name="password" placeholder="password">
+                  <button type="submit">Submit</button>
+              </div>
+            </form>
+
+            <form action="/register" method="post" class = "invisible" id = "registration">
+              <div class="form-group">
+                <h4>Register</h4>
+                  <input type="text" name="username" placeholder="username">
+                  <input type="text" name="email" placeholder="email">
+                  <input type="password" name="password" placeholder="password">
+                  <button type="submit">Register</button>
+              </div>
+            </form>
+
+          </div>
+
+      </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="/js/app.js"></script>
+  </body>
 </html>
