auth view changes

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -36,7 +36,7 @@
         <div class="row">
             <form action="/login" method="post" id = "login">
               <div class="form-group">
-                <h4>Login</h4>
+                <h4>Sign In!</h4>
                   <input type="text" name="username" placeholder="username">
                   <input type="password" name="password" placeholder="password">
                   <button type="submit">Submit</button>
@@ -45,7 +45,7 @@
 
             <form action="/register" method="post" class = "invisible" id = "registration">
               <div class="form-group">
-                <h4>Register</h4>
+                <h4>Sign up!</h4>
                   <input type="text" name="username" placeholder="username">
                   <input type="text" name="email" placeholder="email">
                   <input type="password" name="password" placeholder="password">
