set up CRUD for user routes and temporary code for user views

--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -5,8 +5,24 @@
 </head>
 <body>
 
-	<h1>User Edit Page</h1>
-
+	<header class="container">
+		<h1>User Edit Page</h1>
+		<h1 class="row col">
+			Edit User Information
+		</h1>
+		<nav class="row">
+				<a class="col" href="/">Home</a>
+				<a class="col" href="/users/">Photographer Index</a>
+		</nav>
+	</header>
+	<main class="container">
+		<form action="/user/<%=index%>?_method=PUT" method="POST">
+			Username: <input type="text" name="username" placeholder="username" value="<%=user.username%>"> <br>
+			Email: <input type="text" name="email" placeholder="email" value="<%=user.email%>"> <br>
+			Password: <input type="password" name="password" placeholder="password"> <br>
+			<button class="btn btn-success mb-2" type="submit">Submit Your Changes</button>
+		</form>
+	</main>
 
 </body>
 </html>
