--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,8 +4,18 @@
 	<title></title>
 </head>
 <body>
+	<header>
+		<h1>User Index Page</h1>
+	</header>
+	<main>
+		<h2>List of Users</h2>
+		<ul>
+			<%for (let i = 0; i < users.length; i++) {%>
+				<li><a href="/user/<%=users[i].id%>"><%=users[i].username%></a></li>
+			<%}%>
+		</ul>
+	</main>
 
-	<h1>User Index Page</h1>
 
 </body>
 </html>
