--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -6,6 +6,9 @@
 <body>
 	<header>
 		<h1>User Index Page</h1>
+		<nav>
+			<a href="/artist">Artist</a>
+		</nav>
 	</header>
 	<main>
 		<h2>List of Users</h2>
