created Artist Index View and and created artist creation form

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -6,6 +6,10 @@
 <body>
 	<header>
 		<h1>User Index Page</h1>
+		<nav>
+			<h6>Want to create an event?</h6>
+			<button type="button" class = "" name="createArtist"><a href="/artist">Become an artist!</a></button>
+		</nav>
 	</header>
 	<main>
 		<h2>List of Users</h2>
