--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -5,8 +5,12 @@
 </head>
 <body>
 	<header>
-		<h1>User Index Page</h1>
+		<h1>User Profile</h1>
 		<nav>
+			<nav>
+      	 		<button class="btn btn-outline-info btn-lg"><a href="/">Browse</a></button>
+      	  		<button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
+      		</nav>  
 			<h6>Want to create an event?</h6>
 			<button type="button" class = "" name="createArtist"><a href="/artist">Become an artist!</a></button>
 			<a href="/artist">Artist</a>
