--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -10,9 +10,9 @@
 			<nav>
       	 		<button class="btn btn-outline-info btn-lg"><a href="/">Browse</a></button>
       	  		<button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-      		</nav>  
+      		</nav>
 			<h6>Want to create an event?</h6>
-			<button type="button" class = "" name="createArtist"><a href="/artist">Become an artist!</a></button>
+			<button type="button" class = "" name="createArtist"><a href="/artist/new">Become an artist!</a></button>
 			<a href="/artist">Artist</a>
 		</nav>
 	</header>
