--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -9,11 +9,11 @@
 
   <header>
 
-    <h1>Artist Profilew</h1>
+    <h1>Artist Profile</h1>
 
       <nav>
-        <button class="btn btn-outline-info btn-lg"><a href="/">Browse</a></button>
-        <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
+        <button class="btn btn-outline-info btn-lg">Browse</button>
+        <button class="btn btn-outline-info btn-lg">User Profile</button>
       </nav>
 
   </header>
