--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -10,12 +10,12 @@
 
 	    <h1>Artist New Page</h1>
 
-	      <nav>
-	        <button class="btn btn-outline-info btn-lg"><a href="/">Browse</a></button>
-	        <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-	      </nav>
+      <nav>
+        <button class="btn btn-outline-info btn-lg">Browse</button>
+        <button class="btn btn-outline-info btn-lg">User Profile</button>
+      </nav>
 
- 	   </header>
+ 	  </header>
 
 
 
