--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -10,9 +10,9 @@
     	<h1>Event Show Page</h1>
 
       	<nav>
-      	  <button class="btn btn-outline-info btn-lg"><a href="/">Browse</a></button>
-      	  <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-      	</nav>  
+          <button class="btn btn-outline-info btn-lg">Browse</button>
+          <button class="btn btn-outline-info btn-lg">User Profile</button>
+        </nav>
 
   	</header>
 
