--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -11,8 +11,8 @@
 	    <h1>Artist Show Page</h1>
 
 	      <nav>
-	        <button class="btn btn-outline-info btn-lg"><a href="/">Browse</a></button>
-	        <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
+	        <button class="btn btn-outline-info btn-lg">Browse</button>
+	        <button class="btn btn-outline-info btn-lg">User Profile</button>
 	      </nav>
 
  	</header>
