added buttons to artist show page

--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -25,5 +25,9 @@
 
  	</main>
 
+  <footer>
+      <button type="button" name="button"> <a href="/artist/edit"></a>Edit Artist</button>
+      <button type="button" name="button">Delete Artist</button>
+  </footer>
   </body>
 </html>
