updated display of login and register buttons on landing page

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -13,17 +13,10 @@
 				<header>
 					<h1>Live Music Finder App</h1>
 					<h2>Landing Page</h2>
-					<nav class="navbar navbar">
-	          <ul class="nav navbar-nav">
-	            <li class= "active">
-	              <a href="#">Login</a>
-	            </li>
 
-	          <li>
-	            <a href="#">Registration</a>
-	            </li>
-
-	          </ul>
+					<nav>
+            <button class="btn-outline-info btn-lg"><a href="#">Login</a></button>
+            <button class="btn-outline-info btn-lg"><a href="#">Registration</a></button>
 	        </nav>
 	      </div>
 			</header>
