updated home.ejs to have login/register tabs instead of buttons

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -14,10 +14,20 @@
 					<h1>Live Music Finder App</h1>
 					<h2>Landing Page</h2>
 
-					<nav>
-            <button class="btn-outline-info btn-lg"><a href="#">Login</a></button>
-            <button class="btn-outline-info btn-lg"><a href="#">Registration</a></button>
-	        </nav>
+
+<!--           login/register tabs
+ -->      <ul class="nav nav-tabs">
+
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Login</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">Register</a>
+              </li>
+  
+          </ul>
+
 	      </div>
 			</header>
 
