fixed link to artist index from user show page

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -13,7 +13,7 @@
       		</nav>
 			<h6>Want to create an event?</h6>
 			<button type="button" class = "" name="createArtist"><a href="/artist/new">Become an artist!</a></button>
-			<a href="/artist">Artist</a>
+			<button type="button" name="artistIndex"><a href="/artist">Browse Artists</a></button> 
 		</nav>
 	</header>
 	<main>
