--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -10,14 +10,14 @@
     	<h1>Event Edit Page</h1>
 
       	<nav>
-          <button class="btn btn-outline-info btn-lg">Browse</button>
-          <button class="btn btn-outline-info btn-lg">User Profile</button>
+          <button class="btn btn-outline-info btn-lg"> <a href="/artist">Browse</a></button>
+          <button class="btn btn-outline-info btn-lg"> <a href="/user"></a> User Profiles</button>
         </nav>
 
   	</header>
 
   	<main>
-  		
+
   	</main>
 
 </body>
