fixed all navbars

--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -12,8 +12,8 @@
     <h1>Artist Profile</h1>
 
       <nav>
-        <button class="btn btn-outline-info btn-lg">Browse</button>
-        <button class="btn btn-outline-info btn-lg">User Profile</button>
+        <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
+        <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
       </nav>
 
   </header>
