--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -11,8 +11,8 @@
 	    <h1>Artist Show Page</h1>
 
 	      <nav>
-	        <button class="btn-outline-info btn-lg">Browse</button>
-	        <button class="btn-outline-info btn-lg">User Profile</button>
+            <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
+            <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
 	      </nav>
 
  	</header>
@@ -21,7 +21,7 @@
 
  		<h4>Your Created Events</h4>
    		<button type="button" name="event"> <a href="/event">Create New Event</a></button>
-   		<button type="button" name= "user"><a href="/user">Back to Browsing</a> </button>
+   		<button type="button" name="user"><a href="/user">Back to Browsing</a> </button>
 
  	</main>
 
