--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -6,10 +6,9 @@
 <body>
 
 	<header class="container">
-		<h1>User Edit Page</h1>
-		<h1 class="row col">Edit User Information</h1>
+		<h1 class="row col">Edit <%=user.username%> Information</h1>
 		<nav>
-      	  <button class="btn btn-outline-info btn-lg"><a href="/">Browse</a></button>
+      	  <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
       	  <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
       	</nav>  
 
