--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -6,14 +6,11 @@
 <body>
 
 	<header>
-
 		<h1>User Show Page</h1>
 		<h1> <%=user.username%> Info </h1>
-		<nav>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/user/">User Index</a></li>
-			</ul>
+		<nav class="navbar">
+      	 	<button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
+      	  	<button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
 		</nav>
 	</header>
 	<main>
