--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -29,7 +29,7 @@
         <input type="text" name="genre" placeholder="genre"><br />
         <input type="text" name="location" placeholder="location"><br />
         <input type="text" name="website" placeholder="website"><br />
-        <input type="text" name="img" placeholder="img link"><br />
+        <input type="text" name="img" placeholder="image link"><br />
         <textarea name="description" rows="4" cols="40" placeholder="Description"></textarea><br />
 
         <button type="submit" name="button">Create artist</button>
