--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -24,7 +24,7 @@
         <input type="text" name="name" placeholder="name"><br />
         <input type="text" name="venue" placeholder="venue"><br />
         <input type="text" name="date" placeholder="date"><br />
-        <input type="text" name="img" placeholder="img link"><br />
+        <input type="text" name="img" placeholder="image link"><br />
         <textarea name="description" rows="4" cols="40" placeholder="Description"></textarea><br />
 
         <button type="submit" name="button">Create Event</button>
