--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -17,7 +17,12 @@
   	</header>
 
   	<main>
-  		
+				<h2>List of Events</h2>
+				<ul>
+					<%for (let i = 0; i < event.length; i++) {%>
+						<li><a href="/event/<%=event[i].id%>"><%=events[i].name%></a></li>
+					<%}%>
+				</ul>
   	</main>
 
 </body>
