created views for event: new, index, show; events controller

--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -20,7 +20,7 @@
  	<main>
 
  		<h4>Your Created Events</h4>
-   		<button type="button" name="event"> <a href="/event">Create New Event</a></button>
+   		<button type="button" name="event"> <a href="/event/new">Create New Event</a></button>
    		<button type="button" name="user"><a href="/user">Back to Browsing</a> </button>
 
  	</main>
