--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -11,7 +11,6 @@
 
       	<nav>
 
-
           <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
           <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
 
@@ -20,6 +19,18 @@
   	</header>
 
   	<main>
+
+			<form action="/event/<%=event.id%>?_method=PUT" method="POST"><br />
+
+				<input type="text" name="name" placeholder="name"><br />
+				<input type="text" name="venue" placeholder="venue"><br />
+				<input type="text" name="date" placeholder="date"><br />
+				<input type="text" name="img" placeholder="image link"><br />
+				<textarea name="description" rows="4" cols="40" placeholder="Description"></textarea><br />
+
+				<button type="submit" name="button">Edit Event</button>
+
+			</form>
 
   	</main>
 
