organized user show page and event index page w/ bootstrap

--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -2,28 +2,57 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style>
+		body { padding-top: 10px; };
+	</style>
 </head>
+
 <body>
-
 	<header>
+		<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
 
-    	<h1>Event Index Page</h1>
+						<ul class="nav navbar-left">
+							<li class="active"><a href="/">Home</a></li>
+							<li><a href="/user">Users</a></li>
+							<li><a href="/artist">Artists</a></li>
+						</ul>
 
-      	<nav>
-          <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-          <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-        </nav>
+					</div>
+			</nav>
 
-  	</header>
+	</header>
 
-  	<main>
-				<h2>List of Events</h2>
+
+	<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Live Music Finder App</h1>
+    <p>Some dang ol' catchy byline will go here</p>
+  </div>
+	</div>
+
+	<div class="container-fluid bg-3 text-center">
+	<h3>Events</h3><br>
+		<div class="row">
+			<div class="col-sm-3">
 				<ul>
 					<%for (let i = 0; i < events.length; i++) {%>
-						<li><a href="/event/<%=events[i].id%>"><%=events[i].name%></a></li>
+						<li><p><a href="/event/<%=events[i].id%>"><%=events[i].name%></a></p><br />
+						<img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></li>
 					<%}%>
 				</ul>
-  	</main>
+			</div>
+
+		</div>
+	</div>
+
+	<footer class="container-fluid text-center">
+		<p>Footer Here</p>
+	</footer>
 
 </body>
 </html>
