--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -1,30 +1,119 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>User Profile</title>
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style>
+	body { padding-top: 10px; };
+	</style>
 </head>
 <body>
-
 	<header>
-		<h1>User Show Page</h1>
-		<h1> <%=user.username%> Info </h1>
-		<nav class="navbar">
-      	 	<button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-      	  	<button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-		</nav>
-	</header>
-	<main>
+		<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
 
-		<h2>User Attributes</h2>
-		<ul>
-			<li>Username: <%= user.username %></li>
-			<li>Email: <%=user.email %></li>
-		</ul>
-		<a class="btn btn-outline-dark btn-sm" href="/user/<%= user.id %>/edit">Edit User</a>
-			<form action="/user/<%= user.id %>?_method=DELETE" method="POST">
-				<button class="btn btn-outline-danger btn-sm" type="submit">Delete User</button>
-		</form>
-	</main>
+						<ul class="nav navbar-left">
+							<li class="active"><a href="/">Home</a></li>
+							<li><a href="/event">Events</a></li>
+							<li><a href="/artist">Artists</a></li>
+						</ul>
+
+						<ul class="nav navbar-right">
+							<li><a href="/user"><span class="glyphicon glyphicon-plus"></span>Back to Users</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+
+		</div>
+	</header>
+
+
+
+	<div class="col-lg-12 col-sm-12">
+	    <div class="card hovercard">
+	        <div class="card-background">
+	            <img class="card-bkimg" alt="" src="">
+	            <!-- Img here-->
+	        </div>
+	        <div class="useravatar">
+	            <img alt="" src="<%=user.avatar%>">
+	        </div>
+	        <div class="card-info"> <span class="card-title"><h3> <%=user.username%>'s Info </h3></span>
+
+	        </div>
+	    </div>
+	    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+	        <div class="btn-group" role="group">
+	            <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+	                <div class="hidden-xs">About</div>
+	            </button>
+	        </div>
+	        <div class="btn-group" role="group">
+	            <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+	                <div class="hidden-xs">Events</div>
+	            </button>
+	        </div>
+	        <div class="btn-group" role="group">
+	            <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+	                <div class="hidden-xs">Likes</div>
+	            </button>
+	        </div>
+					<div class="btn-group" role="group">
+	            <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+	                <div class="hidden-xs">Artists</div>
+	            </button>
+	        </div>
+	    </div>
+
+	      <div class="well">
+			      <div class="tab-content">
+
+			        <div class="tab-pane fade in active" id="tab1">
+			          <h3>
+									<ul>
+										<li>Username: <%= user.username %></li>
+										<li>Email: <%=user.email %></li>
+									</ul>
+								</h3>
+			        </div>
+
+			        <div class="tab-pane fade in" id="tab2">
+			          <h3>Events Created</h3>
+			        </div>
+
+			        <div class="tab-pane fade in" id="tab3">
+			          <h3>Events Liked</h3>
+			        </div>
+
+							<div class="tab-pane fade in" id="tab4">
+			          <h3>Affiliated Artists</h3>
+			        </div>
+			      </div>
+	    </div>
+
+	    </div>
+
+
+		<div class="col-lg-12 col-sm-12">
+			<a class="btn btn-outline-dark btn-sm btn-block" href="/user/<%= user.id %>/edit">Edit User</a>
+				<form action="/user/<%= user.id %>?_method=DELETE" method="POST">
+					<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete User</button>
+			</form>
+		</div>
+
+
+
+
+
+		<footer class="container-fluid text-center">
+	  		<p>Footer Here</p>
+		</footer>
+
+
 
 </body>
 </html>
