--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -1,42 +1,124 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
+	<head>
+		<title>Event Show Page</title>
+		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			body { padding-top: 10px; };
+		</style>
+		</head>
 
-	<header>
+		<body>
+			<header>
+				<nav class="navbar navbar-inverse">
+						<div class="container-fluid">
 
-    	<h1>Event Show Page</h1>
+								<ul class="nav navbar-left">
+									<li class="active"><a href="/">Home</a></li>
+									<li><a href="/artist">Artists</a></li>
+								</ul>
 
-      	<nav>
-          <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-          <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-        </nav>
+								<ul class="nav navbar-right">
+									<li><a href="/event"><span class="glyphicon glyphicon-plus"></span>Back to Events</a></li>
+								</ul>
+							</div>
+						</div>
+					</nav>
 
-  	</header>
+				</div>
+			</header>
 
-  	<main>
 
-			<main>
+			<div class="col-lg-12 col-sm-12">
+			    <div class="card hovercard">
+			        <div class="card-background">
+			            <img class="card-bkimg" alt="" src="">
+			            <!-- Img here-->
+			        </div>
 
-				<h2>Event Details</h2>
-				<ul>
-					<li>Name: <%= event.name %></li>
-					<li>Description: <%=event.description %></li>
-					<li>Venue: <%= event.venue %></li>
-					<li>Date: <%= event.date %></li>
-					<li>Interested: <%= event.meta.interested %></li>
-					<li>Going: <%= event.meta.going %></li>
-				</ul><br />
+			        <div class="card-info"> <span class="card-title"><h3> <%=event.name%> Info </h3></span>
 
-				<a class="btn btn-outline-dark btn-sm" href="/event/<%= event.id %>/edit">Edit Event</a>
-					<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
-						<button class="btn btn-outline-danger btn-sm" type="submit">Delete Event</button>
-				</form>
-			</main>
+			        </div>
+			    </div>
+			    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+			        <div class="btn-group" role="group">
+			            <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+			                <div class="hidden-xs">About</div>
+			            </button>
+			        </div>
+			        <div class="btn-group" role="group">
+			            <button type="button" id="interested" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+			                <div class="hidden-xs">Interested</div>
+			            </button>
+			        </div>
+			        <div class="btn-group" role="group">
+			            <button type="button" id="going" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+			                <div class="hidden-xs">Going</div>
+			            </button>
+			        </div>
+							<div class="btn-group" role="group">
+			            <button type="button" id="artists" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+			                <div class="hidden-xs">Artists</div>
+			            </button>
+			        </div>
+			    </div>
 
-  	</main>
+			      <div class="well">
+					      <div class="tab-content">
+
+					        <div class="tab-pane fade in active" id="tab1">
+										<h2>Event Details</h2>
+										<ul>
+											<li>Name: <%= event.name %></li>
+											<li>Description: <%=event.description %></li>
+											<li>Venue: <%= event.venue %></li>
+											<li>Date: <%= event.date %></li>
+										</ul>
+					        </div>
+
+					        <div class="tab-pane fade in" id="tab2">
+					          <h3>Users Interested: <%= event.meta.interested %></h3>
+					        </div>
+
+					        <div class="tab-pane fade in" id="tab3">
+					          <h3>Users Going: <%= event.meta.going %> </h3>
+					        </div>
+
+									<div class="tab-pane fade in" id="tab4">
+					          <h3>Affiliated Artists</h3>
+					        </div>
+					      </div>
+			    	</div>
+
+			    </div>
+
+
+				<div class="col-lg-12 col-sm-12">
+					<a class="btn btn-outline-dark btn-sm btn-block" href="/event/<%= event.id %>/edit">Edit Event</a>
+						<form action="/user/<%= event.id %>?_method=DELETE" method="POST">
+							<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete Event</button>
+					</form>
+				</div>
+
+				<footer class="container-fluid text-center">
+			  		<p>Footer Here</p>
+				</footer>
+
+
+
+		</body>
+		</html>
+
+
+
+
+
+
+
+
 
 </body>
 </html>
