updated user model; now when artists are created, they will show on user details as link to artist show page

--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -24,6 +24,12 @@
       <h4>Create New Artist</h4>
 
       <form action="/artist" method="POST"><br />
+        
+        <select name="userId">
+          <% for (let i = 0; i < users.length; i++) { -%>
+            <option value="<%=users[i].id%>"><%= users[i].username %></option>
+          <% } -%>
+        </select> <br/>
 
         <input type="text" name="name" placeholder="name"><br />
         <input type="text" name="genre" placeholder="genre"><br />
