--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -28,7 +28,7 @@
 				<input type="text" name="img" placeholder="Image Link" value="<%=event.img%>"><br />
 				<textarea name="description" rows="4" cols="40" placeholder="Description"><%=event.description%></textarea><br />
 
-				<button type="submit" name="button">Edit Event</button>
+				<button type="submit" name="button">Submit Changes</button>
 
 			</form>
 
