--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -37,17 +37,17 @@
 				<form class= "form-inline-block" action="/user/<%=index%>?_method=PUT" method="POST">
 
 					<label class= "control-label" for="updateUsername">Update Username:</label>
-					<input type="text" class= "form-control" name="username" id= "updateUsername" placeholder="username" value="<%=user.username%>"><br />
+					<input type="text" class= "form-control" name="username" id= "updateUsername" placeholder="Username" value="<%=user.username%>"><br />
 
 					<label class= "control-label" for="updateUserEmail">Update Email:</label>
-					<input type="text" class= "form-control" name="email" placeholder="email" value="<%=user.email%>"><br />
+					<input type="text" class= "form-control" name="email" placeholder="Email Address" value="<%=user.email%>"><br />
 
 		<!-- 		unable to edit password. if we set the value as the user password, the form will generate the password hash.
 					for this to work, I think we'd need to bcrypt the password that's submitted in this form.
 					Password: <input type="password" name="password" placeholder="password" value="<%=user.password%>"> <br>
 		 -->
 
-					<button class="btn btn-success mb-2 btn-block" type="submit">Submit Your Changes</button>
+					<button class="btn btn-success mb-2 btn-block" type="submit">Submit Changes</button>
 				</form>
 			</div>
 
